--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "project-3",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.3.7",
     "@craco/craco": "^6.2.0",
@@ -12,16 +13,17 @@
     "@material-ui/core": "^4.12.3",
     "@tailwindcss/forms": "^0.3.3",
     "autoprefixer": "^9.8.6",
-    "heroicons-react": "^1.4.1",
-    "postcss": "^7.0.36",
     "graphql": "^15.4.0",
+    "heroicons-react": "^1.4.1",
     "jwt-decode": "^2.2.0",
+    "postcss": "^7.0.36",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.8"
   },
   "scripts": {
